# notus

./: .gitignore  Cargo.toml  console.txt  notes.json  readme.md
notes/: NotHello2.json  NotHello3.json  NotHello4.json  fuckery.json  fuckery1.json  nothello.json  nothello1.json
src/: cli.rs  commands.rs  main.rs  notes.rs
src/assets/: cities.txt
