[package]
name = "notus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
rand = "0.8.5"
assert_cmd = "2.0.14"
predicates = "3.1.0"
scan_fmt = "0.2.6"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.37"
serde_json = '1.0'