[package]
name = "notus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
rand = "0.8.5"
assert_cmd = "2.0.14"
predicates = "3.1.0"
scan_fmt = "0.2.6"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.37"
serde_json = '1.0'
bincode = "1.3.3"
termimad = "0.29"
crossterm = "0.27.0"
[dependencies.cursive]
version = "0.20.0"
default-features = false

[features]
default = ["ncurses-backend"]
ncurses-backend = ["cursive/ncurses-backend"]
pancurses-backend = ["cursive/pancurses-backend"]
termion-backend = ["cursive/termion-backend"]
crossterm-backend = ["cursive/crossterm-backend"]
blt-backend = ["cursive/blt-backend"]